Created page with "* [[File:Sketcher_ConstrainEqual.svg|32px]] [[Sketcher_ConstrainEqual|Vazba shodnosti]]: Zajišťuje, aby hrany měly stejnou délku ( přímky) nebo zakřivení (ostatní hrany kromě B-spline)."

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -179,9 +179,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainParallel.svg&amp;filetimestamp=20240101173144&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainParallel.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainParallel.html" title="Sketcher ConstrainParallel">Vazba rovnob&#283;&#382;nosti</a>: Vynut&iacute;, aby byly linie rovnob&#283;&#382;n&eacute;.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainPerpendicular.svg&amp;filetimestamp=20240101173234&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainPerpendicular.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainPerpendicular.html" title="Sketcher ConstrainPerpendicular">Vazba kolmosti</a>: Zaji&scaron;&#357;uje, aby dv&#283; p&#345;&iacute;mky byly kolm&eacute;, nebo aby dv&#283; hrany, nebo hrana a osa, byly kolm&eacute; v m&iacute;st&#283; jejich pr&#367;se&#269;&iacute;ku. Vazba m&#367;&#382;e tak&eacute; spojit dv&#283; hrany a vynutit jejich kolmost v m&iacute;st&#283; spoje.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainTangent.svg&amp;filetimestamp=20240101173249&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainTangent.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainTangent.html" title="Sketcher ConstrainTangent">Vazba te&#269;ny/koline&aacute;rn&iacute;</a>: Zaru&#269;&iacute;, &#382;e dv&#283; hrany nebo hrana a osa budou te&#269;n&eacute;. Omezen&iacute; m&#367;&#382;e tak&eacute; spojit dv&#283; hrany a vynutit jejich te&#269;nost ve spoji. Pokud jsou vybr&aacute;ny dv&#283; p&#345;&iacute;mky, budou koline&aacute;rn&iacute;.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainEqual.svg&amp;filetimestamp=20240101173306&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainEqual.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainEqual.html" title="Sketcher ConstrainEqual">Equal Constraint</a>: Constrains edges to have an equal length (lines) or curvature (other edges except B-splines).</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainEqual.svg&amp;filetimestamp=20240101173306&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainEqual.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainEqual.html" title="Sketcher ConstrainEqual">Vazba shodnosti</a>: Zaji&scaron;&#357;uje, aby hrany m&#283;ly stejnou d&eacute;lku ( p&#345;&iacute;mky) nebo zak&#345;iven&iacute; (ostatn&iacute; hrany krom&#283; B-spline).</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainSymmetric.svg&amp;filetimestamp=20240101173322&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainSymmetric.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainSymmetric.html" title="Sketcher ConstrainSymmetric">Symmetric Constraint</a>: Constrains two points to be symmetrical around a line or axis, or around a third point.</li></ul>
 </div>
@@ -662,13 +660,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118123309
+Cached time: 20260118123435
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.473 seconds
-Real time usage: 0.834 seconds
-Preprocessor visited node count: 1482/1000000
+CPU time usage: 0.436 seconds
+Real time usage: 0.698 seconds
+Preprocessor visited node count: 1481/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -678,19 +676,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   62.596      1 -total
- 21.92%   13.718      1 Template:Sketcher_Tools_navi/cs
- 13.49%    8.445      2 Template:Navigation_menu_2
- 13.20%    8.263      1 Template:Userdocnavi/cs
- 10.23%    6.405      1 Template:PropertyView
-  7.56%    4.735      6 Template:Caption
-  6.94%    4.346     34 Template:Version
-  6.60%    4.134      5 Template:MenuCommand
-  6.58%    4.120      1 Template:Variable
-  4.90%    3.066      2 Template:Docnav
+100.00%   49.458      1 -total
+ 28.35%   14.021      1 Template:Sketcher_Tools_navi/cs
+ 18.21%    9.008      2 Template:Navigation_menu_2
+ 14.42%    7.134      1 Template:PropertyView
+ 10.20%    5.046      1 Template:Variable
+ 10.14%    5.014      1 Template:Userdocnavi/cs
+  7.28%    3.599      2 Template:Docnav
+  5.29%    2.618     34 Template:Version
+  5.04%    2.494      6 Template:Caption
+  4.56%    2.257     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118123308 and revision id 1740447. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118123434 and revision id 1740449. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
