--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -180,9 +180,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainPerpendicular.svg&amp;filetimestamp=20240101173234&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainPerpendicular.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainPerpendicular.html" title="Sketcher ConstrainPerpendicular">Vazba kolmosti</a>: Zaji&scaron;&#357;uje, aby dv&#283; p&#345;&iacute;mky byly kolm&eacute;, nebo aby dv&#283; hrany, nebo hrana a osa, byly kolm&eacute; v m&iacute;st&#283; jejich pr&#367;se&#269;&iacute;ku. Vazba m&#367;&#382;e tak&eacute; spojit dv&#283; hrany a vynutit jejich kolmost v m&iacute;st&#283; spoje.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainTangent.svg&amp;filetimestamp=20240101173249&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainTangent.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainTangent.html" title="Sketcher ConstrainTangent">Vazba te&#269;ny/koline&aacute;rn&iacute;</a>: Zaru&#269;&iacute;, &#382;e dv&#283; hrany nebo hrana a osa budou te&#269;n&eacute;. Omezen&iacute; m&#367;&#382;e tak&eacute; spojit dv&#283; hrany a vynutit jejich te&#269;nost ve spoji. Pokud jsou vybr&aacute;ny dv&#283; p&#345;&iacute;mky, budou koline&aacute;rn&iacute;.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainEqual.svg&amp;filetimestamp=20240101173306&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainEqual.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainEqual.html" title="Sketcher ConstrainEqual">Vazba shodnosti</a>: Zaji&scaron;&#357;uje, aby hrany m&#283;ly stejnou d&eacute;lku ( p&#345;&iacute;mky) nebo zak&#345;iven&iacute; (ostatn&iacute; hrany krom&#283; B-spline).</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainSymmetric.svg&amp;filetimestamp=20240101173322&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainSymmetric.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainSymmetric.html" title="Sketcher ConstrainSymmetric">Symmetric Constraint</a>: Constrains two points to be symmetrical around a line or axis, or around a third point.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainSymmetric.svg&amp;filetimestamp=20240101173322&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainSymmetric.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainSymmetric.html" title="Sketcher ConstrainSymmetric">Vazba symetrie</a>: Zaji&scaron;&#357;uje symetrii dvou bod&#367; vzhledem k p&#345;&iacute;mce nebo ose, p&#345;&iacute;padn&#283; vzhledem k t&#345;et&iacute;mu bodu.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainBlock.svg&amp;filetimestamp=20240101173347&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainBlock.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainBlock.html" title="Sketcher ConstrainBlock">Block Constraint</a>: Blocks edges in place with a single constraint. It is mainly intended for B-splines.</li></ul>
 </div>
@@ -660,13 +658,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118123435
+Cached time: 20260118123558
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.436 seconds
-Real time usage: 0.698 seconds
-Preprocessor visited node count: 1481/1000000
+CPU time usage: 0.464 seconds
+Real time usage: 1.177 seconds
+Preprocessor visited node count: 1480/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -676,19 +674,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   49.458      1 -total
- 28.35%   14.021      1 Template:Sketcher_Tools_navi/cs
- 18.21%    9.008      2 Template:Navigation_menu_2
- 14.42%    7.134      1 Template:PropertyView
- 10.20%    5.046      1 Template:Variable
- 10.14%    5.014      1 Template:Userdocnavi/cs
-  7.28%    3.599      2 Template:Docnav
-  5.29%    2.618     34 Template:Version
-  5.04%    2.494      6 Template:Caption
-  4.56%    2.257     14 Template:KEY
+100.00%   50.099      1 -total
+ 21.89%   10.968      1 Template:Sketcher_Tools_navi/cs
+ 21.77%   10.905      1 Template:Userdocnavi/cs
+ 14.23%    7.127      2 Template:Navigation_menu_2
+  9.45%    4.734      1 Template:PropertyView
+  7.13%    3.572     34 Template:Version
+  5.86%    2.934      2 Template:Docnav
+  5.72%    2.865      6 Template:Caption
+  5.38%    2.695     14 Template:KEY
+  4.53%    2.269      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118123434 and revision id 1740449. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118123557 and revision id 1740451. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
