--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -182,9 +182,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainEqual.svg&amp;filetimestamp=20240101173306&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainEqual.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainEqual.html" title="Sketcher ConstrainEqual">Vazba shodnosti</a>: Zaji&scaron;&#357;uje, aby hrany m&#283;ly stejnou d&eacute;lku ( p&#345;&iacute;mky) nebo zak&#345;iven&iacute; (ostatn&iacute; hrany krom&#283; B-spline).</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainSymmetric.svg&amp;filetimestamp=20240101173322&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainSymmetric.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainSymmetric.html" title="Sketcher ConstrainSymmetric">Vazba symetrie</a>: Zaji&scaron;&#357;uje symetrii dvou bod&#367; vzhledem k p&#345;&iacute;mce nebo ose, p&#345;&iacute;padn&#283; vzhledem k t&#345;et&iacute;mu bodu.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainBlock.svg&amp;filetimestamp=20240101173347&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainBlock.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainBlock.html" title="Sketcher ConstrainBlock">Vazba blokace</a>: Blokuje hrany na m&iacute;st&#283; pomoc&iacute; jedin&eacute;ho omezen&iacute;. Je ur&#269;eno p&#345;edev&scaron;&iacute;m pro B-splajny.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainSnellsLaw.svg&amp;filetimestamp=20240101173802&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainSnellsLaw.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainSnellsLaw.html" title="Sketcher ConstrainSnellsLaw">Refraction Constraint</a>: Constrains two lines to follow the law of refraction of light as it penetrates through an interface.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainSnellsLaw.svg&amp;filetimestamp=20240101173802&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainSnellsLaw.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainSnellsLaw.html" title="Sketcher ConstrainSnellsLaw">Vazba refrakce</a>: Zaji&scaron;&#357;uje, aby dv&#283; p&#345;&iacute;mky dodr&#382;ovaly z&aacute;kon lomu sv&#283;tla p&#345;i pr&#367;chodu rozhran&iacute;m.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span id="Sketcher_CompToggleConstraints"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_ToggleDrivingConstraint.svg&amp;filetimestamp=20240101171305&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ToggleDrivingConstraint.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Toggle Constraints:</span></li></ul>
 </div>
@@ -656,13 +654,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118123713
+Cached time: 20260118124044
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.485 seconds
-Real time usage: 0.871 seconds
-Preprocessor visited node count: 1479/1000000
+CPU time usage: 0.413 seconds
+Real time usage: 0.618 seconds
+Preprocessor visited node count: 1478/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -672,19 +670,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   63.550      1 -total
- 29.71%   18.881      1 Template:Sketcher_Tools_navi/cs
- 17.30%   10.996      2 Template:Navigation_menu_2
- 13.50%    8.579      1 Template:Userdocnavi/cs
- 13.10%    8.326      1 Template:PropertyView
-  6.20%    3.939      2 Template:Docnav
-  5.88%    3.738      1 Template:Variable
-  5.67%    3.605     34 Template:Version
-  5.27%    3.348     14 Template:KEY
-  4.20%    2.670      8 Template:VersionPlus
+100.00%   42.979      1 -total
+ 19.27%    8.283      1 Template:Sketcher_Tools_navi/cs
+ 13.50%    5.803      6 Template:Caption
+ 13.17%    5.662      2 Template:Navigation_menu_2
+ 12.39%    5.323      1 Template:PropertyView
+  9.40%    4.039      1 Template:Userdocnavi/cs
+  7.35%    3.157     34 Template:Version
+  6.71%    2.882      8 Template:VersionPlus
+  6.58%    2.826      5 Template:MenuCommand
+  5.90%    2.535      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118123712 and revision id 1740453. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118124043 and revision id 1740455. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
