--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -184,9 +184,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainBlock.svg&amp;filetimestamp=20240101173347&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainBlock.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainBlock.html" title="Sketcher ConstrainBlock">Vazba blokace</a>: Blokuje hrany na m&iacute;st&#283; pomoc&iacute; jedin&eacute;ho omezen&iacute;. Je ur&#269;eno p&#345;edev&scaron;&iacute;m pro B-splajny.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainSnellsLaw.svg&amp;filetimestamp=20240101173802&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainSnellsLaw.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainSnellsLaw.html" title="Sketcher ConstrainSnellsLaw">Vazba refrakce</a>: Zaji&scaron;&#357;uje, aby dv&#283; p&#345;&iacute;mky dodr&#382;ovaly z&aacute;kon lomu sv&#283;tla p&#345;i pr&#367;chodu rozhran&iacute;m.</li></ul>
 <ul><li><span id="Sketcher_CompToggleConstraints"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_ToggleDrivingConstraint.svg&amp;filetimestamp=20240101171305&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ToggleDrivingConstraint.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> P&#345;epnut&iacute; vazeb:</span></li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ToggleDrivingConstraint.svg&amp;filetimestamp=20240101171305&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ToggleDrivingConstraint.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ToggleDrivingConstraint.html" title="Sketcher ToggleDrivingConstraint">Toggle Driving/Reference Constraints</a>: Toggles the dimensional constraint creation tools between driving and reference mode, or toggles selected dimensional constraints between those modes.</li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ToggleDrivingConstraint.svg&amp;filetimestamp=20240101171305&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ToggleDrivingConstraint.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ToggleDrivingConstraint.html" title="Sketcher ToggleDrivingConstraint">P&#345;ep&iacute;n&aacute;n&iacute; &#345;&iacute;d&iacute;c&iacute;/referen&#269;n&iacute;ch vazby</a>: P&#345;ep&iacute;n&aacute; n&aacute;stroje pro vytv&aacute;&#345;en&iacute; rozm&#283;rov&yacute;ch vazeb mezi re&#382;imem &#345;&iacute;zen&iacute; a referen&#269;n&iacute;m re&#382;imem nebo p&#345;ep&iacute;n&aacute; vybran&eacute; rozm&#283;rov&eacute; vazby mezi t&#283;mito re&#382;imy.</li></ul></dd></dl>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ToggleActiveConstraint.svg&amp;filetimestamp=20231231200133&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ToggleActiveConstraint.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ToggleActiveConstraint.html" title="Sketcher ToggleActiveConstraint">Toggle Constraints</a>: Activates or deactivates selected constraints.</li></ul></dd></dl>
 </div>
@@ -652,13 +650,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118124145
+Cached time: 20260118124359
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.491 seconds
-Real time usage: 0.876 seconds
-Preprocessor visited node count: 1477/1000000
+CPU time usage: 0.430 seconds
+Real time usage: 0.857 seconds
+Preprocessor visited node count: 1476/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -668,19 +666,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   51.464      1 -total
- 33.97%   17.481      1 Template:Sketcher_Tools_navi/cs
- 17.22%    8.861      2 Template:Navigation_menu_2
- 13.70%    7.052      1 Template:Userdocnavi/cs
-  9.17%    4.720      1 Template:PropertyView
-  6.30%    3.240      8 Template:VersionPlus
-  6.05%    3.112      2 Template:Docnav
-  4.93%    2.539      1 Template:Variable
-  4.88%    2.512     14 Template:KEY
-  4.55%    2.344     34 Template:Version
+100.00%   51.183      1 -total
+ 36.63%   18.749      1 Template:Sketcher_Tools_navi/cs
+ 15.79%    8.083      2 Template:Navigation_menu_2
+ 14.37%    7.355      1 Template:Userdocnavi/cs
+  7.75%    3.965      1 Template:PropertyView
+  5.18%    2.653      2 Template:Docnav
+  4.62%    2.365      6 Template:Caption
+  4.58%    2.342     34 Template:Version
+  3.93%    2.012      5 Template:MenuCommand
+  3.88%    1.985      8 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118124144 and revision id 1740457. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118124358 and revision id 1740463. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
