--- a/wiki/it/Part_Prism.html
+++ b/wiki/it/Part_Prism.html
@@ -4,7 +4,7 @@
 <li><a href="../tr/Part_Prism.html" class="mw-pt-progress mw-pt-progress--low" title="Par&ccedil;a Prizma (4% translated)" lang="tr" dir="ltr">T&uuml;rk&ccedil;e</a></li>
 <li><a href="../es/Part_Prism.html" class="mw-pt-progress mw-pt-progress--low" title="Part Prisma (12% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Part_Prism.html" class="mw-pt-progress mw-pt-progress--complete" title="Part Prisme (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Part_Prism.html" class="mw-pt-progress mw-pt-progress--complete" title="Cz&#281;&#347;&#263;: Graniastos&#322;up (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Part_Prism.html" class="mw-pt-progress mw-pt-progress--low" title="Prisma (4% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../cs/Part_Prism.html" class="mw-pt-progress mw-pt-progress--low" title="Part Prism (4% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
@@ -72,11 +72,8 @@
 </p><p><span id="Properties"></span>
 </p>
 <h2><span id="Propriet.C3.A0"></span><span class="mw-headline" id="Propriet&agrave;">Propriet&agrave;</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Vedere anche: <a href="../it/Property_editor.html" class="mw-redirect" title="Property editor/it">Editor delle propriet&agrave;</a>.
-</p>
-</div>
-<p>Un oggetto Part Prisma deriva da un oggetto <a href="../it/Part_Feature.html" title="Part Feature/it">Funzione Part</a> e ne eredita tutte le propriet&agrave;. Ha inoltre le seguenti propriet&agrave; aggiuntive:
+<p>Vedere anche: <a href="../it/Property_View.html" title="Property View/it">Visualizzatore delle propriet&agrave;</a>.
+</p><p>Un oggetto Part Prisma deriva da un oggetto <a href="../it/Part_Feature.html" title="Part Feature/it">Funzione Part</a> e ne eredita tutte le propriet&agrave;. Ha inoltre le seguenti propriet&agrave; aggiuntive:
 </p><p><span id="Data"></span>
 </p>
 <h3><span class="mw-headline" id="Dati">Dati</span></h3>
@@ -153,35 +150,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118124442
+Cached time: 20260118124537
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.107 seconds
-Real time usage: 0.166 seconds
-Preprocessor visited node count: 682/1000000
+CPU time usage: 0.099 seconds
+Real time usage: 0.157 seconds
+Preprocessor visited node count: 681/1000000
 Post&#8208;expand include size: 17932/2097152 bytes
 Template argument size: 5737/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 3/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4664/5000000 bytes
+Unstrip post&#8208;expand size: 4668/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   39.315      1 -total
- 21.21%    8.340      1 Template:Part_Tools_navi/it
- 19.38%    7.619      6 Template:PropertyData
- 13.28%    5.219      2 Template:Navigation_menu_2
- 13.02%    5.120      6 Template:Variable
- 12.35%    4.857      1 Template:Userdocnavi/it
- 11.19%    4.401      2 Template:TitleProperty
-  8.87%    3.489      2 Template:Code
-  8.23%    3.235      7 Template:Value
-  7.40%    2.910      1 Template:GuiCommand/it
+100.00%   39.755      1 -total
+ 25.16%   10.004      6 Template:PropertyData
+ 20.69%    8.224      1 Template:Part_Tools_navi/it
+ 17.39%    6.913      6 Template:Variable
+ 10.06%    3.999      2 Template:TitleProperty
+  9.92%    3.945      1 Template:Userdocnavi/it
+  8.98%    3.571      2 Template:Navigation_menu_2
+  8.36%    3.323      2 Template:Code
+  7.52%    2.990      7 Template:Value
+  7.11%    2.825      1 Template:GuiCommand/it
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:10987-0!canonical and timestamp 20260118124442 and revision id 1740465. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:10987-0!canonical and timestamp 20260118124537 and revision id 1740469. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
