--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -186,9 +186,9 @@
 <ul><li><span id="Sketcher_CompToggleConstraints"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_ToggleDrivingConstraint.svg&amp;filetimestamp=20240101171305&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ToggleDrivingConstraint.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> P&#345;epnut&iacute; vazeb:</span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ToggleDrivingConstraint.svg&amp;filetimestamp=20240101171305&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ToggleDrivingConstraint.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ToggleDrivingConstraint.html" title="Sketcher ToggleDrivingConstraint">P&#345;ep&iacute;n&aacute;n&iacute; &#345;&iacute;d&iacute;c&iacute;/referen&#269;n&iacute;ch vazby</a>: P&#345;ep&iacute;n&aacute; n&aacute;stroje pro vytv&aacute;&#345;en&iacute; rozm&#283;rov&yacute;ch vazeb mezi re&#382;imem &#345;&iacute;zen&iacute; a referen&#269;n&iacute;m re&#382;imem nebo p&#345;ep&iacute;n&aacute; vybran&eacute; rozm&#283;rov&eacute; vazby mezi t&#283;mito re&#382;imy.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ToggleActiveConstraint.svg&amp;filetimestamp=20231231200133&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ToggleActiveConstraint.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ToggleActiveConstraint.html" title="Sketcher ToggleActiveConstraint">P&#345;ep&iacute;n&aacute;n&iacute; vazeb</a>: Aktivuje nebo deaktivuje vybran&eacute; vazby.</li></ul></dd></dl>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Sketcher_Tools">Sketcher Tools</span></h3>
-</div>
+<p><span id="Sketcher_Tools"></span>
+</p>
+<h3><span id="N.C3.A1stroje_Sketcheru"></span><span class="mw-headline" id="N&aacute;stroje_Sketcheru">N&aacute;stroje Sketcheru</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span id="Sketcher_CompCreateFillets"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_CreateFillet.svg&amp;filetimestamp=20240101090229&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateFillet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Create Fillet/Chamfer:</span></li></ul>
 </div>
@@ -648,12 +648,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118124525
+Cached time: 20260118124623
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.472 seconds
-Real time usage: 0.713 seconds
+CPU time usage: 0.479 seconds
+Real time usage: 0.706 seconds
 Preprocessor visited node count: 1475/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
@@ -664,19 +664,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   49.361      1 -total
- 24.11%   11.899      1 Template:Sketcher_Tools_navi/cs
- 16.23%    8.009      1 Template:Userdocnavi/cs
- 15.27%    7.539      1 Template:PropertyView
- 12.75%    6.296      2 Template:Navigation_menu_2
-  7.65%    3.774     34 Template:Version
-  6.22%    3.068      1 Template:Variable
-  6.03%    2.978      2 Template:Docnav
-  5.60%    2.764      8 Template:VersionPlus
-  5.47%    2.701      6 Template:Caption
+100.00%   52.524      1 -total
+ 15.15%    7.959      1 Template:Sketcher_Tools_navi/cs
+ 13.19%    6.930      1 Template:PropertyView
+ 11.65%    6.118      1 Template:Userdocnavi/cs
+  9.84%    5.171      2 Template:Navigation_menu_2
+  8.79%    4.615      6 Template:Caption
+  8.29%    4.354     34 Template:Version
+  7.73%    4.060      5 Template:MenuCommand
+  7.51%    3.944      8 Template:VersionPlus
+  6.15%    3.228      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118124525 and revision id 1740467. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118124622 and revision id 1740471. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
