--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -189,9 +189,7 @@
 <p><span id="Sketcher_Tools"></span>
 </p>
 <h3><span id="N.C3.A1stroje_Sketcheru"></span><span class="mw-headline" id="N&aacute;stroje_Sketcheru">N&aacute;stroje Sketcheru</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span id="Sketcher_CompCreateFillets"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_CreateFillet.svg&amp;filetimestamp=20240101090229&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateFillet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Create Fillet/Chamfer:</span></li></ul>
-</div>
+<ul><li><span id="Sketcher_CompCreateFillets"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_CreateFillet.svg&amp;filetimestamp=20240101090229&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateFillet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Vytvo&#345;it zaoblen&iacute;/zkosen&iacute;:</span></li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateFillet.svg&amp;filetimestamp=20240101090229&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateFillet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateFillet.html" title="Sketcher CreateFillet">Fillet</a>: Creates a fillet between two non-parallel edges. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: The tool can also create a chamfer.</li></ul></dd></dl>
 </div>
@@ -648,13 +646,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118124623
+Cached time: 20260118124732
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.479 seconds
-Real time usage: 0.706 seconds
-Preprocessor visited node count: 1475/1000000
+CPU time usage: 0.568 seconds
+Real time usage: 2.075 seconds
+Preprocessor visited node count: 1474/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -664,19 +662,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   52.524      1 -total
- 15.15%    7.959      1 Template:Sketcher_Tools_navi/cs
- 13.19%    6.930      1 Template:PropertyView
- 11.65%    6.118      1 Template:Userdocnavi/cs
-  9.84%    5.171      2 Template:Navigation_menu_2
-  8.79%    4.615      6 Template:Caption
-  8.29%    4.354     34 Template:Version
-  7.73%    4.060      5 Template:MenuCommand
-  7.51%    3.944      8 Template:VersionPlus
-  6.15%    3.228      1 Template:Variable
+100.00%  179.631      1 -total
+ 31.43%   56.454      1 Template:Sketcher_Tools_navi/cs
+ 20.23%   36.341      2 Template:Navigation_menu_2
+ 10.33%   18.554      1 Template:Userdocnavi/cs
+  9.88%   17.755      8 Template:VersionPlus
+  9.29%   16.692      1 Template:PropertyView
+  5.55%    9.973      1 Template:Variable
+  5.17%    9.289      6 Template:Caption
+  4.14%    7.436     14 Template:KEY
+  4.12%    7.403     34 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118124622 and revision id 1740471. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118124729 and revision id 1740473. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
