Created page with ":* [[Image:Sketcher_CreateChamfer.svg|32px]] [[Sketcher_CreateChamfer|Zkosení]]: vytvoří zkosení mezi dvěma neparalelními hranami. Jedná se o stejný nástroj jako [[Sketcher_CreateFillet|Zaoblení]], ale s odlišným počátečním režimem. {{Version|1.0}}"

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -191,9 +191,7 @@
 <h3><span id="N.C3.A1stroje_Sketcheru"></span><span class="mw-headline" id="N&aacute;stroje_Sketcheru">N&aacute;stroje Sketcheru</span></h3>
 <ul><li><span id="Sketcher_CompCreateFillets"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_CreateFillet.svg&amp;filetimestamp=20240101090229&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateFillet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Vytvo&#345;it zaoblen&iacute;/zkosen&iacute;:</span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateFillet.svg&amp;filetimestamp=20240101090229&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateFillet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateFillet.html" title="Sketcher CreateFillet">Zaoblen&iacute;</a>: Vytvo&#345;&iacute; zaoblen&iacute; mezi dv&#283;ma neparaleln&iacute;mi hranami. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: Tento n&aacute;stroj m&#367;&#382;e tak&eacute; vytv&aacute;&#345;et zkosen&iacute;.</li></ul></dd></dl>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateChamfer.svg&amp;filetimestamp=20240323210113&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateChamfer.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateChamfer.html" title="Sketcher CreateChamfer">Chamfer</a>: creates a chamfer between two non-parallel edges. This is the same tool as <a href="../Sketcher_CreateFillet.html" title="Sketcher CreateFillet">Fillet</a> but with a different initial mode. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateChamfer.svg&amp;filetimestamp=20240323210113&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateChamfer.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateChamfer.html" title="Sketcher CreateChamfer">Zkosen&iacute;</a>: vytvo&#345;&iacute; zkosen&iacute; mezi dv&#283;ma neparaleln&iacute;mi hranami. Jedn&aacute; se o stejn&yacute; n&aacute;stroj jako <a href="../Sketcher_CreateFillet.html" title="Sketcher CreateFillet">Zaoblen&iacute;</a>, ale s odli&scaron;n&yacute;m po&#269;&aacute;te&#269;n&iacute;m re&#382;imem. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul></dd></dl>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span id="Sketcher_CompCurveEdition"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_Trimming.svg&amp;filetimestamp=20240101091455&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Trimming.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Edit Edge:</span></li></ul>
 </div>
@@ -644,13 +642,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118124900
+Cached time: 20260118124951
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.544 seconds
-Real time usage: 0.847 seconds
-Preprocessor visited node count: 1473/1000000
+CPU time usage: 0.440 seconds
+Real time usage: 0.726 seconds
+Preprocessor visited node count: 1472/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -660,19 +658,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   43.990      1 -total
- 23.77%   10.457      1 Template:Sketcher_Tools_navi/cs
- 14.19%    6.242      2 Template:Navigation_menu_2
- 13.49%    5.933      1 Template:Userdocnavi/cs
-  7.77%    3.417     34 Template:Version
-  7.41%    3.261      1 Template:PropertyView
-  7.03%    3.094      8 Template:VersionPlus
-  6.23%    2.741      2 Template:Docnav
-  3.94%    1.731     14 Template:KEY
-  3.89%    1.710      6 Template:Caption
+100.00%   47.938      1 -total
+ 23.20%   11.122      1 Template:Sketcher_Tools_navi/cs
+ 13.67%    6.552      2 Template:Navigation_menu_2
+ 11.40%    5.463      1 Template:PropertyView
+ 11.19%    5.366      1 Template:Userdocnavi/cs
+  8.79%    4.214     14 Template:KEY
+  6.25%    2.996      1 Template:Variable
+  6.17%    2.957     34 Template:Version
+  5.99%    2.872      8 Template:VersionPlus
+  5.77%    2.767      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118124859 and revision id 1740475. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118124950 and revision id 1740477. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
