Created page with ":* [[Image:Sketcher_Projection.svg|32px]] [[Sketcher_Projection|Externí projekce]]: Vytvoří hrany projekce vnější geometrie. {{Version|1.1}}"

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -197,9 +197,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Split.svg&amp;filetimestamp=20240101091342&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Split.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Split.html" title="Sketcher Split">Rozd&#283;lit hranu</a>: Rozd&#283;l&iacute; hranu a p&#345;enese v&#283;t&scaron;inu vazeb.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Extend.svg&amp;filetimestamp=20240101091319&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Extend.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Extend.html" title="Sketcher Extend">Prodlou&#382;it hranu</a>: Prodlou&#382;&iacute; nebo zkr&aacute;t&iacute; p&#345;&iacute;mku nebo oblouk na libovoln&eacute; m&iacute;sto nebo na c&iacute;lovou hranu &#269;i bod.</li></ul></dd></dl>
 <ul><li><span id="Sketcher_CompExternal"><span typeof="mw:File"><a href="../index.php?title=Sketcher_Projection.svg&amp;filetimestamp=20241129200338&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Projection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Extern&iacute; geometrie:</span></li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Projection.svg&amp;filetimestamp=20241129200338&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Projection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Projection.html" title="Sketcher Projection">External Projection</a>: Creates the projection edges of external geometry. <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Projection.svg&amp;filetimestamp=20241129200338&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Projection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Projection.html" title="Sketcher Projection">Extern&iacute; projekce</a>: Vytvo&#345;&iacute; hrany projekce vn&#283;j&scaron;&iacute; geometrie. <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul></dd></dl>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Intersection.svg&amp;filetimestamp=20241129200334&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Intersection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Intersection.html" title="Sketcher Intersection">External Intersection</a>: Creates the intersection edges of external geometry with the sketch plane. <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul></dd></dl>
 </div>
@@ -632,13 +630,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118125444
+Cached time: 20260118125613
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.535 seconds
-Real time usage: 1.574 seconds
-Preprocessor visited node count: 1467/1000000
+CPU time usage: 0.508 seconds
+Real time usage: 1.201 seconds
+Preprocessor visited node count: 1466/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -648,19 +646,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   75.757      1 -total
- 24.44%   18.512      1 Template:Sketcher_Tools_navi/cs
- 20.74%   15.714      1 Template:Userdocnavi/cs
- 15.30%   11.591      2 Template:Navigation_menu_2
-  8.66%    6.564      1 Template:PropertyView
-  6.66%    5.043      6 Template:Caption
-  5.95%    4.505      2 Template:Docnav
-  5.53%    4.189     34 Template:Version
-  5.35%    4.053      1 Template:Variable
-  3.77%    2.856      8 Template:VersionPlus
+100.00%   58.157      1 -total
+ 21.65%   12.589      1 Template:Sketcher_Tools_navi/cs
+ 12.38%    7.200      1 Template:PropertyView
+ 10.93%    6.357      1 Template:Userdocnavi/cs
+  9.98%    5.806      2 Template:Navigation_menu_2
+  8.66%    5.038      6 Template:Caption
+  7.21%    4.191     34 Template:Version
+  6.85%    3.983      2 Template:Docnav
+  6.24%    3.629      5 Template:MenuCommand
+  5.95%    3.458      8 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118125443 and revision id 1740489. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118125612 and revision id 1740491. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
