Created page with "* <span id="Sketcher_Paste">[[File:Edit-paste.svg|32px]] Vložení prvků: Viz [[#Copy,_cut_and_paste|Kopírování, vyjmutí a vložení]].</span><!--Do not edit span id: the Sketcher_Paste pages redirect here-->"

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -215,9 +215,7 @@
 <div class="mw-translate-fuzzy">
 <ul><li><span id="Sketcher_Cut"><span typeof="mw:File"><a href="../index.php?title=Edit-cut.svg&amp;filetimestamp=20240704192537&amp;.html" class="mw-file-description"><img src="../File/Edit-cut.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Vyjmut&iacute; prvk&#367;: Viz <a href="#Copy,_cut_and_paste">Kop&iacute;rov&aacute;n&iacute;, vyjmut&iacute; a vlo&#382;en&iacute;</a>.<span id="Sketcher_Cut"></span>]].</span></li></ul>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span id="Sketcher_Paste"><span typeof="mw:File"><a href="../index.php?title=Edit-paste.svg&amp;filetimestamp=20240704192705&amp;.html" class="mw-file-description"><img src="../File/Edit-paste.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Paste Elements: See <a href="#Copy,_cut_and_paste">Copy, cut and paste</a>.</span></li></ul>
-</div>
+<ul><li><span id="Sketcher_Paste"><span typeof="mw:File"><a href="../index.php?title=Edit-paste.svg&amp;filetimestamp=20240704192705&amp;.html" class="mw-file-description"><img src="../File/Edit-paste.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Vlo&#382;en&iacute; prvk&#367;: Viz <a href="#Copy,_cut_and_paste">Kop&iacute;rov&aacute;n&iacute;, vyjmut&iacute; a vlo&#382;en&iacute;</a>.</span></li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="B-Spline_Tools">B-Spline Tools</span></h3>
 </div>
@@ -602,13 +600,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118131732
+Cached time: 20260118131814
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.422 seconds
-Real time usage: 0.518 seconds
-Preprocessor visited node count: 1453/1000000
+CPU time usage: 0.449 seconds
+Real time usage: 0.693 seconds
+Preprocessor visited node count: 1452/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -618,19 +616,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.329      1 -total
- 26.92%   10.320      1 Template:Sketcher_Tools_navi/cs
- 19.81%    7.592      1 Template:Userdocnavi/cs
- 13.72%    5.258      2 Template:Navigation_menu_2
-  8.17%    3.132      1 Template:PropertyView
-  6.28%    2.407      2 Template:Docnav
-  6.16%    2.361     34 Template:Version
-  4.95%    1.897      6 Template:Caption
-  4.60%    1.762      8 Template:VersionPlus
-  4.34%    1.663      1 Template:Variable
+100.00%   38.123      1 -total
+ 23.60%    8.997      1 Template:Sketcher_Tools_navi/cs
+ 16.19%    6.171      2 Template:Navigation_menu_2
+ 14.63%    5.576      1 Template:Userdocnavi/cs
+ 10.99%    4.189      2 Template:Docnav
+  8.75%    3.335      1 Template:PropertyView
+  6.52%    2.485     34 Template:Version
+  5.29%    2.017      8 Template:VersionPlus
+  5.22%    1.990      5 Template:MenuCommand
+  4.59%    1.749      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118131732 and revision id 1740539. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118131814 and revision id 1740541. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
