Created page with "* [[File:Sketcher_BSplineConvertToNURBS.svg|32px]] [[Sketcher_BSplineConvertToNURBS|Geometrie do B-spline]]: Převádí hrany na B-splajny."

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -219,9 +219,7 @@
 <p><span id="B-Spline_Tools"></span>
 </p>
 <h3><span id="N.C3.A1stroje_B-Spline"></span><span class="mw-headline" id="N&aacute;stroje_B-Spline">N&aacute;stroje B-Spline</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineConvertToNURBS.svg&amp;filetimestamp=20240331101832&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineConvertToNURBS.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineConvertToNURBS.html" title="Sketcher BSplineConvertToNURBS">Geometry to B-Spline</a>: Converts edges to B-splines.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineConvertToNURBS.svg&amp;filetimestamp=20240331101832&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineConvertToNURBS.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineConvertToNURBS.html" title="Sketcher BSplineConvertToNURBS">Geometrie do B-spline</a>: P&#345;ev&aacute;d&iacute; hrany na B-splajny.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineIncreaseDegree.svg&amp;filetimestamp=20240101115116&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineIncreaseDegree.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineIncreaseDegree.html" title="Sketcher BSplineIncreaseDegree">Increase B-Spline Degree</a>: Increases the degree (order) of B-splines.</li></ul>
 </div>
@@ -600,13 +598,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118131840
+Cached time: 20260118132438
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.406 seconds
-Real time usage: 0.582 seconds
-Preprocessor visited node count: 1452/1000000
+CPU time usage: 0.479 seconds
+Real time usage: 0.702 seconds
+Preprocessor visited node count: 1451/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -616,19 +614,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.970      1 -total
- 21.62%    6.697      1 Template:Sketcher_Tools_navi/cs
- 16.64%    5.154      1 Template:Userdocnavi/cs
- 16.44%    5.092      2 Template:Navigation_menu_2
-  8.59%    2.661      2 Template:Docnav
-  8.50%    2.632      1 Template:PropertyView
-  7.15%    2.216     34 Template:Version
-  7.02%    2.173      6 Template:Caption
-  4.57%    1.415      8 Template:VersionPlus
-  4.39%    1.360      1 Template:Variable
+100.00%   44.580      1 -total
+ 26.74%   11.920      1 Template:Sketcher_Tools_navi/cs
+ 16.79%    7.486      2 Template:Navigation_menu_2
+ 12.49%    5.570      1 Template:PropertyView
+ 10.87%    4.844      1 Template:Userdocnavi/cs
+  7.65%    3.410      2 Template:Docnav
+  7.14%    3.183      6 Template:Caption
+  6.62%    2.950      1 Template:Variable
+  5.82%    2.593      1 Template:TOCright
+  5.76%    2.566     34 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118131839 and revision id 1740543. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118132437 and revision id 1740545. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
